chore: replace get(0) with getFirst in NginxLogParserTest